Fix mobile layout issues

--- a/public/stylesheets/sass/_hammer.scss
+++ b/public/stylesheets/sass/_hammer.scss
@@ -77,10 +77,10 @@
     // min-height: initial !important;
     // height: auto !important;
     // padding: 55px 0 0 0;
-    margin-bottom: -55px !important;
+    // margin-bottom: -55px !important;
     position: relative;
     top: -55px;
-    // z-index: 1;;
+    // z-index: 1;
     .inner{
       // padding: 70px 10px 0 10px;
     }
