--- a/public/stylesheets/sass/_layout.scss
+++ b/public/stylesheets/sass/_layout.scss
@@ -1,10 +1,10 @@
 *{ margin: 0; padding: 0; box-sizing: border-box; }
 
 body{
+	background-color: #fff;
 	@media(min-width: $mobileLarge){
 		background-color: #eee;
 	}
-	background-color: #fff;
 }
 
 .clearfix{ clear: both; }
@@ -74,6 +74,23 @@ body{
 	&.unit100{
 		flex: 0 0 100%;
 		max-width: 100%;
+	}
+	&.skills{
+		padding: 0 20px;
+		@media(min-width: $mobileLarge){
+			padding: 0;
+		}
+	}
+	&.contact{
+		padding: 50px 20px 0 20px;
+		background-color: #fff;
+		background-image: none;
+		.overlay{ display: none; }
+		@media(min-width: $mobileLarge){
+			padding: 50px;
+			background-image: url(/images/contact_bg.jpg);
+			.overlay{ display: block; }
+		}
 	}
 	@media(max-width: $tabletPortrait){
 		flex: 0 0 100%;
@@ -198,4 +215,22 @@ body{
 	position: absolute;
 	top: 0; left: 0;
 	opacity: 0.95;
+}
+
+.skills-container{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100%; min-height: 320px;
+	margin: 20px 0 0 0;
+	padding: 0 20px;
+	background-image: url(/images/expertise_bg.jpg);
+	background-position: center;
+	background-size: cover;
+	position: relative;
+	@media(min-width: $mobileLarge){
+		margin: 0; padding: 0;
+	}
 }
